# legato-PlatformAdaptor-FwUpdate

apps/test/: CMakeLists.txt
apps/test/fwupdateDualsysPatchUnitTest/: CMakeLists.txt  Component.cdef  interfaces.h  main.c
apps/test/fwupdateDualsysPatchUnitTest/fwupdateDualsysPatchInitComponent/: Component.cdef  main.c
apps/test/fwupdateDualsysUnitTest/: CMakeLists.txt  main.c
apps/test/fwupdateDualsysUnitTest/fwupdateDualsys/: Component.cdef  fwupdate_stubs.c  fwupdate_stubs.h  wdg_stubs.c
apps/test/fwupdateDualsysUnitTest/fwupdateInitComponent/: main.c
apps/test/fwupdateSinglesysUnitTest/: CMakeLists.txt  Component.cdef  cp.cwe  cp2ls.cwe  cp2ls_ubi.cwe  cp_ubi.cwe  keystore.cwe  ls.cwe  ls2cp.cwe  ls2cp_ubi.cwe  ls_ubi.cwe  main.c
apps/test/fwupdateSinglesysUnitTest/fwupdateSinglesys/: Component.cdef  fwupdate_stubs.c
apps/test/fwupdateSinglesysUnitTest/fwupdateSinglesysInitComponent/: main.c
apps/test/fwupdateSuspendResumeUnitTest/: CMakeLists.txt  Component.cdef  interfaces.h  main.c
apps/test/pa_flashUnitTest/: CMakeLists.txt  main.c
apps/test/pa_flashUnitTest/pa_flash/: Component.cdef  main.c
apps/test/sys_flash/: Component.cdef  sys_flash.c  sys_flash.h
common/: cwe.c  cwe_local.h  utils.c  utils_local.h
mdm9x06/le_pa_fwupdate_singlesys/: Component.cdef
mdm9x07/le_pa_fwupdate_singlesys/: Component.cdef  deltaUpdate.c  deltaUpdate_local.h  pa_flash_local.h  pa_flash_ubi.c  pa_fwupdate_singlesys.c  pa_fwupdate_singlesys.h  pa_patch.c  pa_patch.h  partition.c  partition_local.h
mdm9x28/le_pa_fwupdate_dualsys/: Component.cdef
(+24 files in other folders)
